Since 0.2.9
  - bug fix: custom shortcuts did not work in mode "restrict to current
    server"

0.2.9
  - the user can define custom shortcuts (Go/Save/Copy to some specific folder)
  - new "shift-G" shortcut (Go as suggested)
  - new option "always include tags"; when disabled, tags are added to the
    completion box only if the input box starts with ":" or if
    there is no matching folder
  - it is possible to create new tags in the completion box
  - the "`" shortcut now cycles through "view messages from same sender"
    -> "view messages with same subject" -> "normal view"

0.2.8
  - make it work again with TB 1.5
  - bug fix: prefix tags with ":" even in "Restrict to current server mode"
  - bug fix for "match only on folder name"

0.2.7
  - does not show Saved Search Folders for Copy/Move commands completion
  - makes it possible to add/remove tags with the Copy/Move commands
  - makes it possible to "go" to a tag (i.e. select the corresponding view)
  - Esc-Esc-Esc selects the "All" view (in addition to clearing the Quick
    Search box)

0.2.6
  - allow the user to configure shortcuts

0.2.5
  - bug fix: esc-M set focus on the message content, not the "subject" field
    (for TB 2.0)
  - bug fix: S and C commands did not work properly in stand-alone
    message windows with TB 2.0
  - re-creates Eudora's Alt-Click: the "`" key (back quote) search for
    all messages from the same author as the current message (in the Sent 
    folder, search mail sent To: the same address as the first To: of the 
    current message)
  - when selecting a new folder with the G key, keep the current value
    of the quick search box (if any)

0.2.3
  - let it work with TB 2.0

0.2.2
  - bug fix: field choices in rules were not saved correctly
  - allows to match fields with regexps in rules
  - allows to switch to "Bcc:" in the composer
  - let the extension work with TB 2.0b2
  - allows to jump to a folder even if it is not visible in the current
    folder view

0.2.1